fixed text and spacing

--- a/public/css/ranktracker.css
+++ b/public/css/ranktracker.css
@@ -110,7 +110,7 @@ html, body {
   top: 90vh;
   right: 26.05vw;
   height: 3vh;
-  width: 14vw;
+  width: 12.5vw;
   z-index: 10;
   background: #fff;
   border: 1px solid black;
